# plugin-constructs

./: CMakeLists.txt  README.md
discordpp/: message.cc  message.hh  plugin-constructs.hh  todo.hh
discordpp/CONSTRUCTIN/: FROMJSON.hh  POPULATEVARS.hh
discordpp/constructs/: channel.hh  message.cc  message.hh  sticker.hh  todo.hh
discordpp/types/: nonce.hh
discordpp/util/: construct.hh
